Fixed flex wrap alignment for pictures and captions

--- a/style.css
+++ b/style.css
@@ -109,8 +109,8 @@ button {
   padding-bottom: 64px;
   flex-grow: 1;
   color: #292929;
-  padding-left: 20%;
-  padding-right: 20%;
+  padding-left: 15%;
+  padding-right: 15%;
 }
 
 .info_title {
@@ -122,11 +122,11 @@ button {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  justify-content: space-between;
+  justify-content: space-evenly;
   align-items: flex-start;
   color: #292929;
-  padding: 0%;
   width: 100%;
+  gap: 20px;
 }
 
 .info_image_text_container {
